# argus

./: .env.example  .gitignore  README.md  pyproject.toml
ops/: argus.cron
src/argus/: __init__.py  cli.py  config.py  digest.py  ingest.py  mailer.py  mcp_app.py  mcp_server.py  normalise.py  paths.py  pipeline.py  status.py
state/: last_run.json
tests/: test_config.py  test_ingest.py  test_mcp_server.py  test_status.py
