[project]
name = "argus"
version = "0.1.0"
description = "Intelligence distillation pipeline for newsletter ingestion and daily synthesis."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Argus"}]

dependencies = [
  "typer>=0.12",
  "beautifulsoup4>=4.12",
]

[project.scripts]
argus = "argus.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]
