[project]
name = "argus"
version = "0.1.0"
description = "Intelligence distillation pipeline for newsletter ingestion and daily synthesis."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Argus"}]

dependencies = [
  "typer>=0.12",
  "beautifulsoup4>=4.12",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27",
]

[project.scripts]
argus = "argus.cli:app"
argus-mcp = "argus.mcp_app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/argus"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
